# fauxdin

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  loki.py  test.py
contrib/: loki.py  megamind.py  megaminion.py  pyzmq_push.py  send.py  thor.py
docs/: plan.md  rzmq-v2-plan.md  sink.md
src/: broadcaster.rs  control.rs  lib.rs  lifecycle.rs  messages.rs  sink.rs  source.rs  writers.rs  zmq.rs
src/capture/: folder.rs  mod.rs
src/old/: zmq.rs
