[package]
name = "fauxdin"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full", "sync"] }
epicars = { path = "./epicars" }
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
rzmq = { path = "./rzmq/core" }
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = "0.7.16"
console-subscriber = "0.5.0"
thread-id = "5.0.0"
url = "2.5.7"
serde_json = "1.0.145"
minio = "0.3.0"
toml = "0.9.8"

[dev-dependencies]
# libzmq via the sync `zmq` crate is only used as a wire-interop peer in
# `sink::tests::*` — it gives us cross-implementation verification that
# rzmq's PUSH speaks ZMTP that libzmq's PULL accepts.
zmq = "0.10.0"
